<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerScreen"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="@dimen/title"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/margin3"
        android:orientation="vertical"
        android:weightSum="8">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:focusable="true"
            android:hint="@string/user"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/wageInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:hint="@string/wage"
            android:inputType="number" />

        <TextView
            android:id="@+id/askLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin1"
            android:layout_weight="1.6"
            android:text="@string/askLogin"
            android:textColor="@color/black"
            android:textSize="@dimen/normalText" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1.6"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/sendButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send"
                android:theme="@style/AppTheme.Button" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:theme="@style/AppTheme.Button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>