<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:weightSum="10"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin1"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/userInput"
        android:hint="@string/user"
        android:focusable="true"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:id="@+id/passwordInput"
        android:hint="@string/password"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="@dimen/margin1"
        android:text="@string/noMember"
        android:textColor="@color/black"
        android:textSize="@dimen/normalText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="@dimen/margin1"
        android:text="@string/askRegister"
        android:textColor="@color/blue"
        android:textSize="@dimen/normalText"
        android:id="@+id/askRegister"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin2"
        style="?android:attr/buttonBarStyle"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/sendButton"
            android:theme="@style/AppTheme.Button"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:theme="@style/AppTheme.Button"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>