<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchScreen"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="@dimen/title"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin2">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin2"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/profileButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:background="@drawable/ic_person" />

            <Button
                android:id="@+id/editButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:background="@drawable/ic_edit"
                android:clickable="false" />

            <Button
                android:id="@+id/negotationButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:background="@drawable/ic_contacts"
                android:clickable="false" />

            <Button
                android:id="@+id/closeButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:background="@drawable/ic_business_center"
                android:clickable="false" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/wageInput"
            android:hint="@string/wage" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/jobInput"
            android:hint="@string/job" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/areaInput"
            android:hint="@string/sector1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/sectorInput"
            android:hint="@string/sector2" />

        <EditText
            android:id="@+id/knowledgesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/knowledges"
            android:inputType="text|textMultiLine"
            android:lines="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            style="?android:attr/buttonBarStyle"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/sendButton"
                android:theme="@style/AppTheme.Button"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/logoutButton"
                android:theme="@style/AppTheme.Button"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>