<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"   >
    <LinearLayout
        android:id="@+id/layoutJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/labelList"
            android:text="@string/jobProfile"/>
        <TextView
            android:id="@+id/job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="@dimen/margin1"
            android:textSize="@dimen/labelList" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/labelList"
            android:text="@string/wageProfile"/>
        <TextView
            android:id="@+id/wage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="@dimen/margin1"
            android:textSize="@dimen/labelList" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/layoutSector1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/littleText"
                android:text="@string/sector1Profile"/>
            <TextView
                android:id="@+id/sector1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="@dimen/margin1"
                android:textSize="@dimen/littleText" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutSector2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/littleText"
                android:text="@string/sector2Profile"/>
            <TextView
                android:id="@+id/sector2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="@dimen/margin1"
                android:textSize="@dimen/littleText" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/littleText"
            android:text="@string/state"/>
        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="@dimen/margin1"
            android:textSize="@dimen/littleText" />
    </LinearLayout>
</LinearLayout>