<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactProfileScreen"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="@dimen/title"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameProfile"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="@dimen/title"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="center"
            android:textSize="@dimen/labelList" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameProfile"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="@dimen/title"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/wage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="center"
            android:textSize="@dimen/labelList" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center|bottom"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendNegotiation"
            android:id="@+id/sendButton"
            android:theme="@style/AppTheme.Button" />
    </LinearLayout>
</LinearLayout>